ScreenCast: Streams can be closed while interacted with

This makes sure we do not crash.

BUG: 459693


(cherry picked from commit 73145576b21a3324a5bbc32bf2c2af08af8be719)